# elfremapper

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md
.github/workflows/: cmake.yml
example/: main.cc  readme
include/: elfremapper.h
src/: abi.map  elfremapper.cc
